syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.phoenix.kstore.grpc";
option java_outer_classname = "PeerProto";

package peer;

service PeerServer {
  rpc Ping (Empty) returns (Ack) {}
  rpc PingRequest (PingReq) returns (Ack) {}
  rpc StateSync (State) returns (State) {}
}

message SetElement {
  string key = 1;
  uint64 packed_ts = 2;
}

message Empty {}

message Ack {
  bool ack = 1;
}

message PingReq {
  string peer_name = 1;
  string peer_host = 2;
}

message State {
  string node_name = 1;
  string peer_host = 2;
  repeated SetElement add_set = 3;
  repeated SetElement remove_set = 4;
}
